tests/functional/lang/eval-fail/readDir-not-a-directory-2.err.exp
error:
       … while evaluating the attribute 'symlinkedRegularFile'
         at /pwd/lang/eval-fail/readDir-not-a-directory-2.nix:2:3:
            1| {
            2|   symlinkedRegularFile = builtins.readDir ../readDir/linked;
             |   ^
            3| }

       … while calling the 'readDir' builtin
         at /pwd/lang/eval-fail/readDir-not-a-directory-2.nix:2:26:
            1| {
            2|   symlinkedRegularFile = builtins.readDir ../readDir/linked;
             |                          ^
            3| }

       error: cannot read directory "/pwd/lang/readDir/foo/git-hates-directories": Not a directory
